# python-perfetto-vscode-bug-repro

./: README.md  error_log.txt  main.py  pyproject.toml  trace.json
