[tool.poetry]
name = "perfetto-bug-report"
version = "0.1.0"
description = ""
authors = ["Luca Muscat <lucamuscat@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
perfetto = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
